# intelfactor-inference

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  IntelFactor_China_Factory_Mission_Guide.docx  Makefile  README.md  ROBOFLOW_PROVIDER_SUMMARY.md  batch_roboflow_runner.py  collect_hard_negatives.py  deploy.md  download_metal_datasets.py  policy.hujson  pyproject.toml  run_kyoto_batch.py
configs/: dev-mac-station.yaml  flir-blackfly-station.yaml  station-roboflow.yaml  station.yaml  wiko_taxonomy.yaml
docs/: ARCHITECTURE.md  BACKEND_IMPLEMENTATION_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_REPO_STRATEGY.md  EDGE_CLOUD_CONTRACT.md  GAP_ANALYSIS_ORIN_NANO_BLACKFLY.md  INTEGRATION.md  JETSON_OPERATOR_CONSOLE_VALIDATION.md  JETSON_QUICKSTART.md  KYOTO_EVALUATION_SUMMARY.md  LOCAL_MODE.md  MODEL_BUNDLE_INTEGRATION_SUMMARY.md  ROBOFLOW_INTEGRATION.md  ROBOFLOW_SETUP.md  RUNBOOK_MVP.md  hard_negative_collection_guide.md
kyoto_eval_set/: config_a.json  config_b.json  config_c.json  kyoto_eval_master.csv
migrations/: 001_production_metrics.sql
scripts/: build_trt_engine.sh  capture_training_frames.py  deploy.sh  doctor.py  download_qwen.sh  jetson_bootstrap.sh  metrics_sync.py  production_smoke_test.sh  seed_operator_console.py  setup_models.sh  smoke_test.py  soak_test.sh  station_doctor.sh  sync_test.py  test_roboflow_provider.py  validate_station.sh  verify_trt_engine.py
tasks/: lessons.md  todo.md
tests/: test_acceptance.py  test_api_v2.py  test_edge_operator_ui.py  test_evidence_doctor.py  test_maintenance_api.py  test_maintenance_iq.py  test_model_bundle.py  (+7 more)
(+61 files in other folders)
